# Classassistant

./: CMakeLists.txt  README.md  build.bat  build.sh
docs/: BUILD.md  USAGE.md  readme_full.md
resources/: resources.qrc
src/: Utils.cpp  Utils.h  appcontroller.cpp  attendanceoverlay.cpp  attendancewidget.cpp  attendancewidget.h  buttonconfig.h  configmanager.cpp  configmanager.h  custombuttondialog.cpp  floatingball.cpp  floatingball.h  floatingballwindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  randomnamedialog.cpp  randomnamedialog.h  resourcedownloader.cpp  settingsdialog.cpp  settingsdialog.h  sidebarwindow.cpp  utils.cpp  utils.h  welcomedialog.cpp  welcomedialog.h
src/include/: appcontroller.h  attendanceoverlay.h  configmanager.h  custombuttondialog.h  floatingballwindow.h  models.h  randomnamedialog.h  resourcedownloader.h  settingsdialog.h  sidebarwindow.h  welcomedialog.h
src/ui/: FloatingBall.cpp  FloatingBall.h  FluentTheme.cpp  FluentTheme.h  Sidebar.cpp  Sidebar.h  Tools.cpp  Tools.h
ui/: mainwindow.ui  randomnamedialog.ui  settingsdialog.ui  welcomedialog.ui
